...
    }
    
    // MARK: - Next Question or Results
    private func showNextQuestionOrResults() {
        if isLastQuestion() {
            let result = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: "Ваш результат: \(correctAnswers)/\(questionsAmount)",
                buttonText: "Сыграть ещё раз"
            )
            viewController?.show(quiz: result)
        } else {
            switchToNextQuestion()
            viewController?.setLoadingState(isLoading: true)
            requestNextQuestion()
...
